Supervisor config updated

--- a/python-app.conf
+++ b/python-app.conf
@@ -1,4 +1,4 @@
-[program:pythonapp]
+[program:mqtt-services]
 directory=/opt/app/mqtt-services
 command=/opt/app/mqtt-services/env/bin/python2 main.py
 autostart=true
