--- a/python-app.conf
+++ b/python-app.conf
@@ -2,10 +2,10 @@
 directory=/opt/app/mqtt-services
 command=/opt/app/mqtt-services/env/bin/python2 main.py
 autostart=true
-autorestart=true
+autorestart=false
 user=pythonapp
 # Environment variables ensure that the application runs inside of the
 # configured virtualenv.
-environment=VIRTUAL_ENV="/opt/app/mqtt-services/env",PATH="/opt/app/mqtt-services/env/bin",HOME="/home/pythonapp",USER="pythonapp",MQTT_USER="thermo-01",MQTT_PASS="ThermoPass",MQTT_HOST="farmer.cloudmqtt.com",MQTT_PORT="12674"
+environment=VIRTUAL_ENV="/opt/app/mqtt-services/env",PATH="/opt/app/mqtt-services/env/bin",HOME="/home/pythonapp",USER="pythonapp",MQTT_USER="Logger-01",MQTT_PASS="LOGGYwaggy012",MQTT_HOST="mqtt.poweroid.io",MQTT_PORT="12674"
 stdout_logfile=syslog
 stderr_logfile=syslog
